# agent_demo

./: .gitignore  ENVIRONMENT.md  LEADER_USER_MANUAL.md  README.md  TECHNICAL_ARCHITECTURE.md  USER_MANUAL.md  WORKFLOW.md  pyproject.toml  技术手册.md  用户手册.md  项目介绍.md
case_agent_demo/: __init__.py  agent_runtime.py  agents.py  bayesian_engine.py  bayesian_tool.py  case_replay.py  cli.py  confidence.py  config.py  domain_affinity.py  evidence_book.py  evidence_intake.py  evidence_reasoning.py  evidence_reasoning_engine.py  final_conflict_agent.py  graph_store.py  legal_embeddings.py  legal_kb.py  legal_kb_cli.py  legal_parser.py  llm_clients.py  material_plan.py  models.py  open_source_stack.py  prompt_config.py  relation_tools.py  tools.py  vision_tools.py  workflow.py
config/: api_keys.example.toml  authority_rules.json
docs/: V058_DIFY_MIGRATION.md  V058_TEN_CASE_VALIDATION.md
legal_library/: laws.jsonl
scripts/: build_v058_acceptance_report.py  generate_bayesian_statistics_workbook.py  generate_v058_cases.py  run_v058_live_agent_acceptance.py  sample_v058_provisions.py  v058_case_catalog.py
tests/: README.md  semantic_runtime.py  test_abstract_entity_logic.py  test_agent_person_extraction.py  test_agent_runtime.py  test_authority_reasoning.py  test_bayesian_activation_safety.py  test_bayesian_case_families.py  test_bayesian_engine.py  test_bayesian_tool.py  test_case_family_predicates.py  test_case_neutral_workflow.py  test_case_replay_corpus.py  test_cli_qwen_vision.py  test_confidence_engine.py  test_context_isolation.py  test_domain_affinity.py  (+40 more)
(+165 files in other folders)
