[project]
name = "case-agent-demo"
version = "0.51.0"
description = "LangChain demo for multi-agent case evidence analysis with human case-type confirmation."
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.3.0"
]

[project.optional-dependencies]
docs = [
  "openpyxl>=3.1,<4"
]

[tool.setuptools.packages.find]
include = ["case_agent_demo*"]
