[project]
name = "case-agent-demo"
version = "0.56.0"
description = "Multi-agent case evidence analysis with evidence graphs and registry-driven Bayesian fact inference."
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.3.0"
]

[project.optional-dependencies]
docs = [
  "openpyxl>=3.1,<4"
]

[tool.setuptools.packages.find]
include = ["case_agent_demo*"]
